# VerNFR

./: .gitignore  README.md  dataflowChecker.ml  description.md  dune-project  frama-c-vernfr.opam  ispec.ml  options.ml  testscript.sh  vernfr.ml
.github/workflows/: build.yml
case_studies/: obf.is
case_studies/simple/: mod1.h  mod2.h  nfr-log.txt  simple.c  simple.h  simple.is
case_studies/simple_f/: mod1.c  mod1.h  simple.c  simple.h  simple.is
parser/: dune  ispec.ml  ispec.ott  ispec_lexer.mll  ispec_parse_error.ml  ispec_parser.mly  parse_ispec.ml
scripts/: all-checks.sh  control-flow-check.sh  data-flow-check.sh  nfr-control-flow-check.sh  testscript.sh
src/: controlFlowChecker.ml  dataflowChecker.ml  dune  genericNFRChecker.ml  ispec.ml  options.ml  utils.ml  vernfr.ml
testfiles/: entry.h  entry_f.h  funptr.c  funptr_f.c  whitelist_f.c
testfiles/callable/: callable_spec.is  whitelist.c  whitelist_f.c
testfiles/staticvars/: static.c  static_f.c
tests/: ptests_config  small_test_spec.is  test_config  test_spec.is
tests/allentrypoints/: entry.c  entry.h  entry_f.c  entry_f.h  entry_spec.is  test_config
tests/allentrypoints/oracle/: dune  entry.res.oracle  entry_f.res.oracle
tests/allentrypoints/result/: dune  entry.0.exec.wtests  entry_f.0.exec.wtests
tests/callable/: callable.c  callable_f.c  callable_spec.is  extern_defs.h  test_config  utils.h
tests/callable/oracle/: callable.res.oracle  callable_f.res.oracle  dune
tests/callable/result/: callable.0.exec.wtests  callable_f.0.exec.wtests  dune
tests/entrypoint/: entry.c  entry_f.c  entry_spec.is  test_config
tests/entrypoint/oracle/: entry_f.res.oracle
tests/entrypoint/result/: dune  entry.0.exec.wtests  entry_f.0.exec.wtests
tests/extern_call_order/: extern_call_order.is  extern_call_order_f.c  extern_call_order_f.h  extern_defs.h
tests/fundefs/: fundef.c  fundef.h  fundef_f.c  fundef_f.h  test_config
tests/funptrs/: funptr_f.c  test_config
tests/funptrs/oracle/: dune  funptr.res.oracle  funptr_f.res.oracle
tests/funptrs/result/: dune  funptr.0.exec.wtests  funptr_f.0.exec.wtests
tests/initialisation/: initialisation.c  initialisation.is  initialisation_f.c  test_config
tests/initialisation/oracle/: dune  initialisation.res.oracle  initialisation_f.res.oracle
tests/initialisation/result/: dune  initialisation.0.exec.wtests  initialisation_f.0.exec.wtests
tests/isola2026/: sensors.h  test_config  tmon.is  tmon_a.c  tmon_a.h  tmon_b.c  tmon_b.h  utils.c  utils.h  warnings.h
tests/isola2026/oracle/: dune  tmon_a.res.oracle  tmon_b.res.oracle  utils.res.oracle
tests/isola2026/result/: dune  tmon_a.0.exec.wtests  tmon_b.0.exec.wtests  utils.0.exec.wtests
tests/onlyentrypoints/: entry.h  entry_f.c  entry_f_spec.is  entry_spec.is  test_config
tests/onlyentrypoints/oracle/: dune  entry.res.oracle  entry_f.res.oracle
tests/onlyentrypoints/result/: dune  entry.0.exec.wtests  entry_f.0.exec.wtests
tests/ptrliteral/: ptrliteral.c  ptrliteral_f.c  test_config
tests/ptrliteral/oracle/: dune  ptrliteral.res.oracle  ptrliteral_f.res.oracle
tests/ptrliteral/result/: dune  ptrliteral.0.exec.wtests  ptrliteral_f.0.exec.wtests
tests/staticvars/: static.c  static_f.c  test_config
tests/staticvars/oracle/: dune  static.res.oracle  static_f.res.oracle
tests/staticvars/result/: dune  static.0.exec.wtests  static_f.0.exec.wtests
tests/typedefs/: test_config  typedefs.c  typedefs_f.c
tests/typedefs/oracle/: dune  typedefs.res.oracle  typedefs_f.res.oracle
tests/typedefs/result/: dune  typedefs.0.exec.wtests  typedefs_f.0.exec.wtests
