(copy_files ../*.*)
(alias (name ptests)
  (deps (alias ptests_config)))
; TEST FILE "entry.c"
(alias (name "entry.wtests")
  (deps (alias "entry.0.exec.wtests"))) ; to performs all sub-tests related to a file
(alias (name "entry.c")
  (deps (alias "entry.0.exec"))) ; to reproduce and visualize the all sub-test outputs related to a file
(rule ; TEST #0 OF TEST FILE tests/allentrypoints/entry.c
  (alias "entry.0.exec.wtests")
  (targets "entry.err.log" "entry.res.log"  )
  (deps "entry.0.exec.wtests" "../oracle/entry.res.oracle" "../oracle/entry.err.oracle"  "entry.c"  "entry_spec.is" "entry.h" (package frama-c)  (package "frama-c-vernfr") )
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (run frama-c-wtests -brief "entry.0.exec.wtests" "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    entry.c  -vernfr -nfr-all-entries-declared -nfr-all-entries-defined -keep-unused-functions=all -main f_init -nfr-ispec entry_spec.is > \"entry.res.log\" 2> \"entry.err.log\"" ))
)
(rule ; REPRODUCE TEST #0 OF TEST FILE "entry.c"
  (alias "entry.0.exec")
  (deps  "entry.c"  "entry_spec.is" "entry.h" (package frama-c)  (package "frama-c-vernfr")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (with-accepted-exit-codes 0 (system "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    entry.c  -vernfr -nfr-all-entries-declared -nfr-all-entries-defined -keep-unused-functions=all -main f_init -nfr-ispec entry_spec.is")))
)
(rule ; SHOW TEST COMMAND #0 OF TEST FILE "entry.c"
  (alias "entry.0.exec.show")
  (deps  "entry.c"  "entry_spec.is" "entry.h" (package frama-c)  (package "frama-c-vernfr")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (system "echo 'frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    entry.c  -vernfr -nfr-all-entries-declared -nfr-all-entries-defined -keep-unused-functions=all -main f_init -nfr-ispec entry_spec.is > \"entry.res.log\" 2> \"entry.err.log\"'"))
)
(rule
  (alias "entry.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (diff "../oracle/entry.res.oracle" "entry.res.log"))
)
(rule
  (alias "entry.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (diff "../oracle/entry.err.oracle" "entry.err.log"))
)
(alias (name "entry.diff")
  (deps (alias "entry.0.exec.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
)
(alias (name "ptests_config")
  (deps (alias "entry.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
)
; TEST FILE "entry_f.c"
(alias (name "entry_f.wtests")
  (deps (alias "entry_f.0.exec.wtests"))) ; to performs all sub-tests related to a file
(alias (name "entry_f.c")
  (deps (alias "entry_f.0.exec"))) ; to reproduce and visualize the all sub-test outputs related to a file
(rule ; TEST #0 OF TEST FILE tests/allentrypoints/entry_f.c
  (alias "entry_f.0.exec.wtests")
  (targets "entry_f.err.log" "entry_f.res.log"  )
  (deps "entry_f.0.exec.wtests" "../oracle/entry_f.res.oracle" "../oracle/entry_f.err.oracle"  "entry_f.c"  "entry_spec.is" "entry_f.h" (package frama-c)  (package "frama-c-vernfr") )
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (run frama-c-wtests -brief "entry_f.0.exec.wtests" "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    entry_f.c  -vernfr -nfr-all-entries-declared -nfr-all-entries-defined -keep-unused-functions=all -main f_init -nfr-ispec entry_spec.is > \"entry_f.res.log\" 2> \"entry_f.err.log\"" ))
)
(rule ; REPRODUCE TEST #0 OF TEST FILE "entry_f.c"
  (alias "entry_f.0.exec")
  (deps  "entry_f.c"  "entry_spec.is" "entry_f.h" (package frama-c)  (package "frama-c-vernfr")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (with-accepted-exit-codes 0 (system "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    entry_f.c  -vernfr -nfr-all-entries-declared -nfr-all-entries-defined -keep-unused-functions=all -main f_init -nfr-ispec entry_spec.is")))
)
(rule ; SHOW TEST COMMAND #0 OF TEST FILE "entry_f.c"
  (alias "entry_f.0.exec.show")
  (deps  "entry_f.c"  "entry_spec.is" "entry_f.h" (package frama-c)  (package "frama-c-vernfr")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (system "echo 'frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    entry_f.c  -vernfr -nfr-all-entries-declared -nfr-all-entries-defined -keep-unused-functions=all -main f_init -nfr-ispec entry_spec.is > \"entry_f.res.log\" 2> \"entry_f.err.log\"'"))
)
(rule
  (alias "entry_f.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (diff "../oracle/entry_f.res.oracle" "entry_f.res.log"))
)
(rule
  (alias "entry_f.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (diff "../oracle/entry_f.err.oracle" "entry_f.err.log"))
)
(alias (name "entry_f.diff")
  (deps (alias "entry_f.0.exec.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
)
(alias (name "ptests_config")
  (deps (alias "entry_f.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
)
(alias (name disabled_ptests)
  (deps (alias disabled_ptests_config)))
(alias (name ptests)
  (deps (alias disabled_ptests)))
(alias (name ptests_config)
  (deps (alias disabled_ptests_config)))
(rule ; Warns when some test conditions are disabled
  (alias disabled_ptests_config)
  (deps (universe))
  (enabled_if (or false  (not %{lib-available:frama-c-vernfr.core})))
  (action (progn (echo "WARNING: Enabling conditions of some tests are false for @tests/allentrypoints/ptests_config\n")
                 (echo "- \%{lib-available:frama-c-vernfr.core}: " %{lib-available:frama-c-vernfr.core} "\n")
  ))
)

