(copy_files ../*.*)
(alias (name ptests)
  (deps (alias ptests_config)))
; TEST FILE "callable_f.c"
(alias (name "callable_f.wtests")
  (deps (alias "callable_f.0.exec.wtests"))) ; to performs all sub-tests related to a file
(alias (name "callable_f.c")
  (deps (alias "callable_f.0.exec"))) ; to reproduce and visualize the all sub-test outputs related to a file
(rule ; TEST #0 OF TEST FILE tests/callable/callable_f.c
  (alias "callable_f.0.exec.wtests")
  (targets "callable_f.err.log" "callable_f.res.log"  )
  (deps "callable_f.0.exec.wtests" "../oracle/callable_f.res.oracle" "../oracle/callable_f.err.oracle"  "callable_f.c"  "extern_defs.h" "callable_spec.is" (package frama-c)  (package "frama-c-vernfr") )
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (run frama-c-wtests -brief "callable_f.0.exec.wtests" "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    callable_f.c  -vernfr -nfr-check-calls -main f_10ms -nfr-ispec callable_spec.is > \"callable_f.res.log\" 2> \"callable_f.err.log\"" ))
)
(rule ; REPRODUCE TEST #0 OF TEST FILE "callable_f.c"
  (alias "callable_f.0.exec")
  (deps  "callable_f.c"  "extern_defs.h" "callable_spec.is" (package frama-c)  (package "frama-c-vernfr")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (with-accepted-exit-codes 0 (system "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    callable_f.c  -vernfr -nfr-check-calls -main f_10ms -nfr-ispec callable_spec.is")))
)
(rule ; SHOW TEST COMMAND #0 OF TEST FILE "callable_f.c"
  (alias "callable_f.0.exec.show")
  (deps  "callable_f.c"  "extern_defs.h" "callable_spec.is" (package frama-c)  (package "frama-c-vernfr")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (system "echo 'frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    callable_f.c  -vernfr -nfr-check-calls -main f_10ms -nfr-ispec callable_spec.is > \"callable_f.res.log\" 2> \"callable_f.err.log\"'"))
)
(rule
  (alias "callable_f.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (diff "../oracle/callable_f.res.oracle" "callable_f.res.log"))
)
(rule
  (alias "callable_f.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (diff "../oracle/callable_f.err.oracle" "callable_f.err.log"))
)
(alias (name "callable_f.diff")
  (deps (alias "callable_f.0.exec.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
)
(alias (name "ptests_config")
  (deps (alias "callable_f.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
)
; TEST FILE "callable.c"
(alias (name "callable.wtests")
  (deps (alias "callable.0.exec.wtests"))) ; to performs all sub-tests related to a file
(alias (name "callable.c")
  (deps (alias "callable.0.exec"))) ; to reproduce and visualize the all sub-test outputs related to a file
(rule ; TEST #0 OF TEST FILE tests/callable/callable.c
  (alias "callable.0.exec.wtests")
  (targets "callable.err.log" "callable.res.log"  )
  (deps "callable.0.exec.wtests" "../oracle/callable.res.oracle" "../oracle/callable.err.oracle"  "callable.c"  "extern_defs.h" "callable_spec.is" (package frama-c)  (package "frama-c-vernfr") )
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (run frama-c-wtests -brief "callable.0.exec.wtests" "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    callable.c  -vernfr -nfr-check-calls -main f_10ms -nfr-ispec callable_spec.is > \"callable.res.log\" 2> \"callable.err.log\"" ))
)
(rule ; REPRODUCE TEST #0 OF TEST FILE "callable.c"
  (alias "callable.0.exec")
  (deps  "callable.c"  "extern_defs.h" "callable_spec.is" (package frama-c)  (package "frama-c-vernfr")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (with-accepted-exit-codes 0 (system "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    callable.c  -vernfr -nfr-check-calls -main f_10ms -nfr-ispec callable_spec.is")))
)
(rule ; SHOW TEST COMMAND #0 OF TEST FILE "callable.c"
  (alias "callable.0.exec.show")
  (deps  "callable.c"  "extern_defs.h" "callable_spec.is" (package frama-c)  (package "frama-c-vernfr")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (system "echo 'frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    callable.c  -vernfr -nfr-check-calls -main f_10ms -nfr-ispec callable_spec.is > \"callable.res.log\" 2> \"callable.err.log\"'"))
)
(rule
  (alias "callable.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (diff "../oracle/callable.res.oracle" "callable.res.log"))
)
(rule
  (alias "callable.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (diff "../oracle/callable.err.oracle" "callable.err.log"))
)
(alias (name "callable.diff")
  (deps (alias "callable.0.exec.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
)
(alias (name "ptests_config")
  (deps (alias "callable.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
)
(alias (name disabled_ptests)
  (deps (alias disabled_ptests_config)))
(alias (name ptests)
  (deps (alias disabled_ptests)))
(alias (name ptests_config)
  (deps (alias disabled_ptests_config)))
(rule ; Warns when some test conditions are disabled
  (alias disabled_ptests_config)
  (deps (universe))
  (enabled_if (or false  (not %{lib-available:frama-c-vernfr.core})))
  (action (progn (echo "WARNING: Enabling conditions of some tests are false for @tests/callable/ptests_config\n")
                 (echo "- \%{lib-available:frama-c-vernfr.core}: " %{lib-available:frama-c-vernfr.core} "\n")
  ))
)

