(copy_files ../*.*)
(alias (name ptests)
  (deps (alias ptests_config)))
; TEST FILE "funptr_f.c"
(alias (name "funptr_f.wtests")
  (deps (alias "funptr_f.0.exec.wtests"))) ; to performs all sub-tests related to a file
(alias (name "funptr_f.c")
  (deps (alias "funptr_f.0.exec"))) ; to reproduce and visualize the all sub-test outputs related to a file
(rule ; TEST #0 OF TEST FILE tests/funptrs/funptr_f.c
  (alias "funptr_f.0.exec.wtests")
  (targets "funptr_f.err.log" "funptr_f.res.log"  )
  (deps "funptr_f.0.exec.wtests" "../oracle/funptr_f.res.oracle" "../oracle/funptr_f.err.oracle"  "funptr_f.c"  (package frama-c)  (package "frama-c-vernfr") )
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (run frama-c-wtests -brief "funptr_f.0.exec.wtests" "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    funptr_f.c -vernfr -nfr-fun-ptrs > \"funptr_f.res.log\" 2> \"funptr_f.err.log\"" ))
)
(rule ; REPRODUCE TEST #0 OF TEST FILE "funptr_f.c"
  (alias "funptr_f.0.exec")
  (deps  "funptr_f.c"  (package frama-c)  (package "frama-c-vernfr")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (with-accepted-exit-codes 0 (system "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    funptr_f.c -vernfr -nfr-fun-ptrs")))
)
(rule ; SHOW TEST COMMAND #0 OF TEST FILE "funptr_f.c"
  (alias "funptr_f.0.exec.show")
  (deps  "funptr_f.c"  (package frama-c)  (package "frama-c-vernfr")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (system "echo 'frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    funptr_f.c -vernfr -nfr-fun-ptrs > \"funptr_f.res.log\" 2> \"funptr_f.err.log\"'"))
)
(rule
  (alias "funptr_f.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (diff "../oracle/funptr_f.res.oracle" "funptr_f.res.log"))
)
(rule
  (alias "funptr_f.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (diff "../oracle/funptr_f.err.oracle" "funptr_f.err.log"))
)
(alias (name "funptr_f.diff")
  (deps (alias "funptr_f.0.exec.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
)
(alias (name "ptests_config")
  (deps (alias "funptr_f.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
)
; TEST FILE "funptr.c"
(alias (name "funptr.wtests")
  (deps (alias "funptr.0.exec.wtests"))) ; to performs all sub-tests related to a file
(alias (name "funptr.c")
  (deps (alias "funptr.0.exec"))) ; to reproduce and visualize the all sub-test outputs related to a file
(rule ; TEST #0 OF TEST FILE tests/funptrs/funptr.c
  (alias "funptr.0.exec.wtests")
  (targets "funptr.err.log" "funptr.res.log"  )
  (deps "funptr.0.exec.wtests" "../oracle/funptr.res.oracle" "../oracle/funptr.err.oracle"  "funptr.c"  (package frama-c)  (package "frama-c-vernfr") )
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (run frama-c-wtests -brief "funptr.0.exec.wtests" "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    funptr.c -vernfr -nfr-fun-ptrs > \"funptr.res.log\" 2> \"funptr.err.log\"" ))
)
(rule ; REPRODUCE TEST #0 OF TEST FILE "funptr.c"
  (alias "funptr.0.exec")
  (deps  "funptr.c"  (package frama-c)  (package "frama-c-vernfr")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (with-accepted-exit-codes 0 (system "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    funptr.c -vernfr -nfr-fun-ptrs")))
)
(rule ; SHOW TEST COMMAND #0 OF TEST FILE "funptr.c"
  (alias "funptr.0.exec.show")
  (deps  "funptr.c"  (package frama-c)  (package "frama-c-vernfr")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (system "echo 'frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    funptr.c -vernfr -nfr-fun-ptrs > \"funptr.res.log\" 2> \"funptr.err.log\"'"))
)
(rule
  (alias "funptr.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (diff "../oracle/funptr.res.oracle" "funptr.res.log"))
)
(rule
  (alias "funptr.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (diff "../oracle/funptr.err.oracle" "funptr.err.log"))
)
(alias (name "funptr.diff")
  (deps (alias "funptr.0.exec.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
)
(alias (name "ptests_config")
  (deps (alias "funptr.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
)
(alias (name disabled_ptests)
  (deps (alias disabled_ptests_config)))
(alias (name ptests)
  (deps (alias disabled_ptests)))
(alias (name ptests_config)
  (deps (alias disabled_ptests_config)))
(rule ; Warns when some test conditions are disabled
  (alias disabled_ptests_config)
  (deps (universe))
  (enabled_if (or false  (not %{lib-available:frama-c-vernfr.core})))
  (action (progn (echo "WARNING: Enabling conditions of some tests are false for @tests/funptrs/ptests_config\n")
                 (echo "- \%{lib-available:frama-c-vernfr.core}: " %{lib-available:frama-c-vernfr.core} "\n")
  ))
)

