(copy_files ../*.*)
(alias (name runtest)
  (deps (alias runtest_config)))
; TEST FILE "funptr_f.c"
(alias (name "funptr_f.wtests")
  (deps (alias "funptr_f.0.exec.wtests"))) ; to performs all sub-tests related to a file
(alias (name "funptr_f.c")
  (deps (alias "funptr_f.0.exec"))) ; to reproduce and visualize the all sub-test outputs related to a file
(rule ; TEST #0 OF TEST FILE tests/funptrs/funptr_f.c
  (alias "funptr_f.0.exec.wtests")
  (targets "funptr_f.err.log" "funptr_f.res.log"  )
  (deps "funptr_f.0.exec.wtests" "../oracle/funptr_f.res.oracle" "../oracle/funptr_f.err.oracle"  "funptr_f.c"  (package frama-c)  (package "frama-c-vernfr") (package "frama-c-wp") )
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (run frama-c-wtests -brief "funptr_f.0.exec.wtests" "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jamilon/Documents/vernfr/_build/default:.\" -load-plugin=vernfr,wp    funptr_f.c -vernfr -nfr-fun-ptrs > \"funptr_f.res.log\" 2> \"funptr_f.err.log\"" ))
)
(rule ; REPRODUCE TEST #0 OF TEST FILE "funptr_f.c"
  (alias "funptr_f.0.exec")
  (deps  "funptr_f.c"  (package frama-c)  (package "frama-c-vernfr") (package "frama-c-wp")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (with-accepted-exit-codes 0 (system "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jamilon/Documents/vernfr/_build/default:.\" -load-plugin=vernfr,wp    funptr_f.c -vernfr -nfr-fun-ptrs")))
)
(rule ; SHOW TEST COMMAND #0 OF TEST FILE "funptr_f.c"
  (alias "funptr_f.0.exec.show")
  (deps  "funptr_f.c"  (package frama-c)  (package "frama-c-vernfr") (package "frama-c-wp")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (system "echo 'frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jamilon/Documents/vernfr/_build/default:.\" -load-plugin=vernfr,wp    funptr_f.c -vernfr -nfr-fun-ptrs > \"funptr_f.res.log\" 2> \"funptr_f.err.log\"'"))
)
(rule
  (alias "funptr_f.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (diff "../oracle/funptr_f.res.oracle" "funptr_f.res.log"))
)
(rule
  (alias "funptr_f.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (diff "../oracle/funptr_f.err.oracle" "funptr_f.err.log"))
)
(alias (name "funptr_f.diff")
  (deps (alias "funptr_f.0.exec.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
)
(alias (name "runtest_config")
  (deps (alias "funptr_f.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
)
; TEST FILE "funptr.c"
(alias (name "funptr.wtests")
  (deps (alias "funptr.0.exec.wtests"))) ; to performs all sub-tests related to a file
(alias (name "funptr.c")
  (deps (alias "funptr.0.exec"))) ; to reproduce and visualize the all sub-test outputs related to a file
(rule ; TEST #0 OF TEST FILE tests/funptrs/funptr.c
  (alias "funptr.0.exec.wtests")
  (targets "funptr.err.log" "funptr.res.log"  )
  (deps "funptr.0.exec.wtests" "../oracle/funptr.res.oracle" "../oracle/funptr.err.oracle"  "funptr.c"  (package frama-c)  (package "frama-c-vernfr") (package "frama-c-wp") )
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (run frama-c-wtests -brief "funptr.0.exec.wtests" "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jamilon/Documents/vernfr/_build/default:.\" -load-plugin=vernfr,wp    funptr.c -vernfr -nfr-fun-ptrs > \"funptr.res.log\" 2> \"funptr.err.log\"" ))
)
(rule ; REPRODUCE TEST #0 OF TEST FILE "funptr.c"
  (alias "funptr.0.exec")
  (deps  "funptr.c"  (package frama-c)  (package "frama-c-vernfr") (package "frama-c-wp")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (with-accepted-exit-codes 0 (system "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jamilon/Documents/vernfr/_build/default:.\" -load-plugin=vernfr,wp    funptr.c -vernfr -nfr-fun-ptrs")))
)
(rule ; SHOW TEST COMMAND #0 OF TEST FILE "funptr.c"
  (alias "funptr.0.exec.show")
  (deps  "funptr.c"  (package frama-c)  (package "frama-c-vernfr") (package "frama-c-wp")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (system "echo 'frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jamilon/Documents/vernfr/_build/default:.\" -load-plugin=vernfr,wp    funptr.c -vernfr -nfr-fun-ptrs > \"funptr.res.log\" 2> \"funptr.err.log\"'"))
)
(rule
  (alias "funptr.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (diff "../oracle/funptr.res.oracle" "funptr.res.log"))
)
(rule
  (alias "funptr.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
(action (diff "../oracle/funptr.err.oracle" "funptr.err.log"))
)
(alias (name "funptr.diff")
  (deps (alias "funptr.0.exec.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
)
(alias (name "runtest_config")
  (deps (alias "funptr.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core} %{lib-available:frama-c-wp.core}))
)
(alias (name disabled_runtest)
  (deps (alias disabled_runtest_config)))
(alias (name runtest)
  (deps (alias disabled_runtest)))
(alias (name runtest_config)
  (deps (alias disabled_runtest_config)))
(rule ; Warns when some test conditions are disabled
  (alias disabled_runtest_config)
  (deps (universe))
  (enabled_if (or false  (not %{lib-available:frama-c-vernfr.core}) (not %{lib-available:frama-c-wp.core})))
  (action (progn (echo "WARNING: Enabling conditions of some tests are false for @tests/funptrs/runtest_config\n")
                 (echo "- \%{lib-available:frama-c-vernfr.core}: " %{lib-available:frama-c-vernfr.core} "\n")
                 (echo "- \%{lib-available:frama-c-wp.core}: " %{lib-available:frama-c-wp.core} "\n")
  ))
)

