(copy_files ../*.*)
(alias (name ptests)
  (deps (alias ptests_config)))
; TEST FILE "initialisation_f.c"
(alias (name "initialisation_f.wtests")
  (deps (alias "initialisation_f.0.exec.wtests"))) ; to performs all sub-tests related to a file
(alias (name "initialisation_f.c")
  (deps (alias "initialisation_f.0.exec"))) ; to reproduce and visualize the all sub-test outputs related to a file
(rule ; TEST #0 OF TEST FILE tests/initialisation/initialisation_f.c
  (alias "initialisation_f.0.exec.wtests")
  (targets "initialisation_f.err.log" "initialisation_f.res.log"  )
  (deps "initialisation_f.0.exec.wtests" "../oracle/initialisation_f.res.oracle" "../oracle/initialisation_f.err.oracle"  "initialisation_f.c"  "initialisation.is" (package frama-c)  (package "frama-c-vernfr") )
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (run frama-c-wtests -brief "initialisation_f.0.exec.wtests" "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    initialisation_f.c  -vernfr -nfr-proper-init -main f_10ms -nfr-ispec initialisation.is > \"initialisation_f.res.log\" 2> \"initialisation_f.err.log\"" ))
)
(rule ; REPRODUCE TEST #0 OF TEST FILE "initialisation_f.c"
  (alias "initialisation_f.0.exec")
  (deps  "initialisation_f.c"  "initialisation.is" (package frama-c)  (package "frama-c-vernfr")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (with-accepted-exit-codes 0 (system "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    initialisation_f.c  -vernfr -nfr-proper-init -main f_10ms -nfr-ispec initialisation.is")))
)
(rule ; SHOW TEST COMMAND #0 OF TEST FILE "initialisation_f.c"
  (alias "initialisation_f.0.exec.show")
  (deps  "initialisation_f.c"  "initialisation.is" (package frama-c)  (package "frama-c-vernfr")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (system "echo 'frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    initialisation_f.c  -vernfr -nfr-proper-init -main f_10ms -nfr-ispec initialisation.is > \"initialisation_f.res.log\" 2> \"initialisation_f.err.log\"'"))
)
(rule
  (alias "initialisation_f.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (diff "../oracle/initialisation_f.res.oracle" "initialisation_f.res.log"))
)
(rule
  (alias "initialisation_f.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (diff "../oracle/initialisation_f.err.oracle" "initialisation_f.err.log"))
)
(alias (name "initialisation_f.diff")
  (deps (alias "initialisation_f.0.exec.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
)
(alias (name "ptests_config")
  (deps (alias "initialisation_f.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
)
; TEST FILE "initialisation.c"
(alias (name "initialisation.wtests")
  (deps (alias "initialisation.0.exec.wtests"))) ; to performs all sub-tests related to a file
(alias (name "initialisation.c")
  (deps (alias "initialisation.0.exec"))) ; to reproduce and visualize the all sub-test outputs related to a file
(rule ; TEST #0 OF TEST FILE tests/initialisation/initialisation.c
  (alias "initialisation.0.exec.wtests")
  (targets "initialisation.err.log" "initialisation.res.log"  )
  (deps "initialisation.0.exec.wtests" "../oracle/initialisation.res.oracle" "../oracle/initialisation.err.oracle"  "initialisation.c"  "initialisation.is" (package frama-c)  (package "frama-c-vernfr") )
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (run frama-c-wtests -brief "initialisation.0.exec.wtests" "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    initialisation.c  -vernfr -nfr-proper-init -main f_10ms -nfr-ispec initialisation.is > \"initialisation.res.log\" 2> \"initialisation.err.log\"" ))
)
(rule ; REPRODUCE TEST #0 OF TEST FILE "initialisation.c"
  (alias "initialisation.0.exec")
  (deps  "initialisation.c"  "initialisation.is" (package frama-c)  (package "frama-c-vernfr")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (with-accepted-exit-codes 0 (system "frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    initialisation.c  -vernfr -nfr-proper-init -main f_10ms -nfr-ispec initialisation.is")))
)
(rule ; SHOW TEST COMMAND #0 OF TEST FILE "initialisation.c"
  (alias "initialisation.0.exec.show")
  (deps  "initialisation.c"  "initialisation.is" (package frama-c)  (package "frama-c-vernfr")  (universe))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (system "echo 'frama-c -check -no-autoload-plugins -add-symbolic-path=\"/home/jesper/Documents/opensandbox/vernfr/_build/default:.\" -load-plugin=vernfr    initialisation.c  -vernfr -nfr-proper-init -main f_10ms -nfr-ispec initialisation.is > \"initialisation.res.log\" 2> \"initialisation.err.log\"'"))
)
(rule
  (alias "initialisation.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (diff "../oracle/initialisation.res.oracle" "initialisation.res.log"))
)
(rule
  (alias "initialisation.0.exec.diff")
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
(action (diff "../oracle/initialisation.err.oracle" "initialisation.err.log"))
)
(alias (name "initialisation.diff")
  (deps (alias "initialisation.0.exec.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
)
(alias (name "ptests_config")
  (deps (alias "initialisation.diff"))
  (enabled_if (and true %{lib-available:frama-c-vernfr.core}))
)
(alias (name disabled_ptests)
  (deps (alias disabled_ptests_config)))
(alias (name ptests)
  (deps (alias disabled_ptests)))
(alias (name ptests_config)
  (deps (alias disabled_ptests_config)))
(rule ; Warns when some test conditions are disabled
  (alias disabled_ptests_config)
  (deps (universe))
  (enabled_if (or false  (not %{lib-available:frama-c-vernfr.core})))
  (action (progn (echo "WARNING: Enabling conditions of some tests are false for @tests/initialisation/ptests_config\n")
                 (echo "- \%{lib-available:frama-c-vernfr.core}: " %{lib-available:frama-c-vernfr.core} "\n")
  ))
)

